testing out diffrent publish path in toml file

--- a/front-end/blltn-brd/netlify.toml
+++ b/front-end/blltn-brd/netlify.toml
@@ -1,10 +1,10 @@
 [build]
   command = "npm run build"
   functions = "netlify/functions"
-  publish = "build"
+  publish = "blltn-brd"
 
 [[redirects]]
   from = "/*"
-  to = "/build/index.html"
+  to = "/blltn-brd/build/index.html"
   status = 200
 
