Revert "testing out diffrent publish path in toml file"
This reverts commit 7e65c5839ca7ec61b4236f6163e10230aa824210.

"incorrect configuration of toml file"

--- a/front-end/blltn-brd/netlify.toml
+++ b/front-end/blltn-brd/netlify.toml
@@ -1,10 +1,10 @@
 [build]
   command = "npm run build"
   functions = "netlify/functions"
-  publish = "blltn-brd"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
-  to = "/blltn-brd/build/index.html"
+  to = "/build/index.html"
   status = 200
 
