--- a/front-end/blltn-brd/netlify.toml
+++ b/front-end/blltn-brd/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build"
   functions = "netlify/functions"
-  publish = "front-end/blltn-brd/"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
