--- a/back-end/Pipfile
+++ b/back-end/Pipfile
@@ -9,6 +9,7 @@ psycopg2-binary = "*"
 django-cors-headers = "*"
 djangorestframework = "*"
 django-environ = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
