checking on settings

--- a/back-end/Pipfile
+++ b/back-end/Pipfile
@@ -10,6 +10,8 @@ django-cors-headers = "*"
 djangorestframework = "*"
 django-environ = "*"
 djangorestframework-simplejwt = "*"
+gunicorn = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
